immich/05-immich-db-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: immich-database
  namespace: immich
spec:
  replicas: 1
  selector:
    matchLabels:
      app: immich-database
  template:
    metadata:
      labels:
        app: immich-database
    spec:
      containers:
        - name: immich-postgres
          image: "ghcr.io/tensorchord/vchord-postgres:pg18-v1.1.1"
          imagePullPolicy: Always
          ports:
            - containerPort: 5432
          volumeMounts:
            - name: pgdata
              mountPath: /var/lib/postgresql
              subPath: postgres
          resources: {}
      volumes:
        - name: pgdata
          persistentVolumeClaim:
            claimName: immich-db-pvc
