immich/09-redis-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: redis-server
  namespace: immich
  labels:
    app: redis-server
spec:
  selector:
    matchLabels:
      app: redis-server
  replicas: 1
  template:
    metadata:
      labels:
        app: redis-server
    spec:
      containers:
        - image: redis:alpine
          name: redis-server
          ports:
            - containerPort: 6379
      restartPolicy: Always
