immich/10-redis-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: redis-server
  namespace: immich
  labels:
    app: redis-server
spec:
  ports:
    - port: 6379
  selector:
    app: redis-server
