immich/13-immich-httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: immich
  namespace: immich
spec:
  parentRefs:
    - name: envoy-gateway
      namespace: envoy-gateway-system
  hostnames:
    - "immich.aidengrossman.com"
  rules:
    - backendRefs:
        - group: ""
          kind: Service
          name: immich-server
          port: 2283
          weight: 1
      matches:
        - path:
            type: PathPrefix
            value: /
